Updates the ChangeLog

--- a/main/ChangeLog
+++ b/main/ChangeLog
@@ -1138,3 +1138,5 @@ Work on 11.0-rc11 begins
 11.2-000
 	* CRingBuffer constructor throws if it fails to map the shared memory
 	region and thereby avoiding delayed failures.
+	* RingMaster logging facilities enhanced. RingMaster logs now to 
+	/var/log/nscldaq/ringmaster.log by default at startup.
