--- a/main/ChangeLog
+++ b/main/ChangeLog
@@ -1140,3 +1140,4 @@ Work on 11.0-rc11 begins
 	region and thereby avoiding delayed failures.
 	* RingMaster logging facilities enhanced. RingMaster logs now to 
 	/var/log/nscldaq/ringmaster.log by default at startup.
+	* Issues #6516 & #6519  Failure logic for REGISTER and UNREGISTER loosened in RingMaster.
